# tab-pilot

./: .env.example  .env.production  .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
docs/: wiring_plan.md
scripts/: build.sh  upload-oss.sh
src/: App.vue  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/build_scripts/: cdp.rs  env.rs
src-tauri/capabilities/: default.json
src-tauri/config/: mcporter.example.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: browser-bridge.js
src-tauri/src/: inspect_aily_modules.py  main.rs  tray.rs  x.md
src-tauri/src/core/: config.rs  error.rs  mod.rs
src-tauri/src/engine/: browser.rs  install.rs  mod.rs  snapshot.rs  stream.rs
src-tauri/src/engine/cdp/: chrome.rs  mod.rs
src-tauri/src/engine/webdriver/: mod.rs
src-tauri/src/infra/: audit.rs  guard.rs  mod.rs  pty_clean.rs  runtime.rs  store.rs  tools.rs
src-tauri/src/infra/mcp/: bridge.rs  config.rs  mod.rs  session.rs
src-tauri/src/infra/platform/: mod.rs  unix.rs  windows.rs
src-tauri/src/infra/tools/: downloader.rs  manager.rs  mod.rs  registry.rs
src-tauri/src/models/: mod.rs
src-tauri/src/router/: config.rs  connector.rs  dispatch.rs  mod.rs  protocol.rs
src-tauri/src/services/: auth.rs  browser.rs  browser_sdk.rs  editor_manager.rs  file.rs  jupyter.rs  mcp_client.rs  mod.rs  nodejs.rs  sandbox.rs  session_pool.rs  skills.rs  toolkit_dispatch.rs
src-tauri/src/services/shell/: collector.rs  env.rs  exec.rs  mod.rs  oneshot.rs  session.rs
src-tauri/src/toolkit/: download.rs  mod.rs
src-tauri/src/toolkit/base/: create.rs  delete.rs  dispatch.rs  export.rs  file_ops.rs  mod.rs  parser.rs  sync.rs
src-tauri/src/toolkit/chart/: dispatch.rs  mod.rs  types.rs
src-tauri/src/toolkit/client/: auth.rs  bitable.rs  calendar.rs  doc.rs  drive.rs  im.rs  mod.rs  user.rs
src-tauri/src/toolkit/diagram/: dispatch.rs  mod.rs
src-tauri/src/toolkit/doc/: comments.rs  dispatch.rs  info.rs  mod.rs
src-tauri/src/toolkit/drive/: dispatch.rs  mod.rs  ops.rs
src-tauri/src/toolkit/im/: chats.rs  dispatch.rs  format.rs  messages.rs  mod.rs  types.rs
src-tauri/src/toolkit/image/: dispatch.rs  mod.rs
src-tauri/src/toolkit/mcp/: mod.rs
src-tauri/src/toolkit/openai/: mod.rs
src-tauri/src/toolkit/pdf/: convert.rs  dispatch.rs  extract.rs  form.rs  html.rs  latex.rs  meta.rs  mod.rs  pages.rs
src-tauri/src/toolkit/skillhub/: dispatch.rs  mod.rs
src-tauri/src/toolkit/xlsx/: dispatch.rs  formula.rs  inspect.rs  mod.rs  pivot.rs  recheck.rs  reference.rs  validate.rs
src-tauri/src/ui/: auth.rs  commands.rs  deeplink.rs  mod.rs
src/components/: ModelPicker.vue  UpdateBanner.vue
src/components/run/: RunAsk.vue  RunBlock.vue  RunContent.vue  RunNarration.vue  (+3 more)
src/constants/: guardModes.ts
src/services/: bridge.ts  pilotStore.ts
src/stores/: chatStore.ts  preferenceStore.ts
src/styles/: copilot-tokens.css  index.css
src/types/: wire-events.ts
src/utils/: markdown.ts
src/views/: BrowserView.vue  DashboardView.vue  LogsView.vue  RunView.vue  SecurityView.vue  SettingsView.vue  TerminalView.vue
(+6 files in other folders)
